--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "sass ./style.scss /css/style.css -w --no-source-map -s compressed"
+    "start": "sass style.scss ./css/style.css -w --no-source-map -s compressed"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Kevin-Heiland/panaderia.git"
   },
-  "author": "kevin heiland",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Kevin-Heiland/panaderia/issues"
